# La_Sintetic

./: README.md  app.json  package-lock.json  package.json
ai_endpoint/: .gitignore  README.md  pyproject.toml
ai_endpoint/data/: date_terenuri.csv
ai_endpoint/model/: model.pkl
ai_endpoint/preprocessors/: scaler.pkl
ai_endpoint/src/: api.py  app.py  constants.py  deps.py  ml.py  schemas.py  settings.py  train.py
back-end/: app.js  package-lock.json  package.json  storage.db
back-end/controllers/: Managers.js  Pitches.js  Reservations.js  Reviews.js  Users.js
back-end/helpers/: Managers.txt  Pitches.txt  Reservations.txt  Users
back-end/models/: Managers.js  Pitches.js  Reservations.js  Reviews.js  users.js
back-end/routes/: Managers.js  Pitches.js  Reservations.js  Reviews.js  Users.js  index.js
front-end/: .gitignore  App.js  package-lock.json  package.json
front-end/api/: api.js
front-end/components/: DistanceCalculator.js  LocationPicker.js  PitchCard.js  RecommandationModal.js  ReservationCard.js  ReviewCard.js  UploadImage.js  UploadImageModal.js
front-end/global/: globalStyles.js  ip.js
front-end/routes/: Navigation.js
front-end/screens/: AddReservation.js  EditPitch.js  Login.js  Main.js  ManagerReservations.js  MyPitches.js  Register.js  Reservations.js  UserReservations.js
routes/: MainStack.js
